- rehuff - http://wiki.xiph.org/Rehuff
- SQLite 3.20.1 - http://www.sqlite.org
- Tidy 5.4.0 - http://www.html-tidy.org
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.94 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY



11.20 - 2017/10/12
- Added 7-Zip (.7z) support with m7zRepacker.
- Improved donator information (Peni).
- Improved APNG compression adding ECT and pingo.
- Improved PNG 9-patch compression adding pingo.
- Added more supported extensions (.mzz, .rll).
- Made restore default settings smoother.
- Updated to ECT 0.8.2 (9290a5cf7ea0) x86 and x64 daily optimized builds (thanks przemoc).
- Updated Leanify to 0.4.3.195 daily binaries.
- Updated Ghostscript to 9.22.
- Updated pingo to 0.92 x86 and x64 versions.
- Updated ImageMagick to 7.0.7.6 with HDRI support.
- Updated to cppcheck 1.81.
- Some minor optimizations and code cleanup.

11.10 - 2017/09/24
- Added .webm, .weba and .mk3d support throught MKV tool chain (AlexNG).
- Fixed update checker when donor.
- Updated pingo to 0.91 x86 and x64 versions.
- Updated ImageMagick to 7.0.7.3 with HDRI support.
- Some minor optimizations and code cleanup.

11.00 - 2017/09/05
- Expanded Options window to fit all missing INI directives.
- Added optional toolbar with menu icons (trlkly).
- Added Add folder option (bl3uge).
- Added detected filetype under extension column in file list, when its extension is not know.
- Accurated file listings. Only supported files will be added to the grid.
- Reworked About window to be more colorful.
- Added donator information displayed in Information box. You can enter your donator email in Options->Appearance->Donator.
- Improved a lot grid performance (listing, sorting, removing, clearing, adding, ...).
- Speededup duplicates check when adding items to the grid, which is now exponentially faster (20 times faster for 10,000 files).